Supplement package information

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
   <title>UMD</title>
 </head>
 <body>
-  <script src="../dist/arbitrary-sum.js"></script>
+  <script src="../dist/arbitrary-sum.min.js"></script>
   <script>
     console.log(arbitrary.add(1, 2))
   </script>
